# visionary-pos-pro

./: .env.example  .env.live.example  .env.test.example  .gitignore  README.md  VisionaryPOS.jsx  ecosystem.config.cjs  frontend-sync-config.example.js  package-lock.json  package.json  run-dev-mem.cmd
cashier-tauri/: README.md  index.html  package-lock.json  package.json  vite.config.ts
cashier-tauri/scripts/: release.mjs
cashier-tauri/src/: App.tsx  api.ts  cashierRules.ts  cashierState.tsx  productImages.ts  secureStore.ts  styles.css  types.ts
cashier-tauri/src-tauri/: Cargo.toml  tauri.conf.json
cashier-tauri/src-tauri/capabilities/: default.json
cashier-tauri/src-tauri/src/: main.rs
db/: dev-mem-server-logged.js  dev-mem-server.js  go-live-products.js  hash-credential.js  make-device.js  migrate.js  provision-staff-logins.js  repair-cloud-branches.js  reset-operational-data.js  reset-test-environment.js  schema.mysql.sql  schema.sql
desktop/: package-lock.json  package.json
desktop/src/: README.md  main.js  preload.js
docs/: product-sync-architecture-report.md  sync-realtime-report.md
frontend/: .env.example  index.html  package-lock.json  package.json
frontend/public/: downloads.html  manifest.webmanifest  sw.js
frontend/src/: VisionaryPOS.jsx  main.jsx  productImages.js
src/: auth.js  config.js  db.js  environment.js  realtime.js  server.js  token.js  verification.js
src/routes/: ai.js  auth.js  barcodes.js  environment.js  sync.js  whatsapp.js
src/services/: whatsappAudit.js  whatsappClient.js  (+3 more)
test/: config.test.js  sync.test.js
(+13 files in other folders)
