[package]
name = "visionpos_cashier"
version = "0.1.0"
description = "VISIONPOS cashier workstation"
authors = ["VISIONPOS"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
keyring = "2"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
zeroize = "1"
